# rust_simple_barbershop

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
src/: error.rs  main.rs
src/dao/: customer.rs  mod.rs  schedule.rs  service.rs  user.rs
src/server/: mod.rs  signin.rs  static_file.rs
src/server/customer/: create_customer.rs  mod.rs  read_customer.rs  read_customer_all.rs
src/server/schedule/: create_schedule.rs  mod.rs  read_schedule.rs  read_schedule_all.rs
src/server/service/: create_service.rs  mod.rs  read_service.rs  read_service_all.rs
src/server/user/: create_user.rs  mod.rs  read_user.rs  read_user_all.rs
src/server/web/: customers.rs  menu.rs  mod.rs  schedules.rs  services.rs  sign_page.rs  users.rs
templates/: customer.html  index.html  menu.html  schedule.html  services.html  user.html
