[package]
name = "barbeariateste"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.3.1"
log = "0.4.21"
serde = { version = "1.0.197", features = ["derive"] }
shuttle-actix-web = "0.43.0"
shuttle-runtime = "0.43.0"
sqlx = { version = "0.6", features = [
    "sqlite",
    "runtime-actix-native-tls",
    "chrono",
] }
tera = "1.19.1"
tokio = "1.26.0"
